# kaggle-santa-2023-the-polytope-permutation-puzzle

./: .gitignore  README.md  idea  pyproject.toml
data/: .gitignore
run/: inference.py  puzzle_test.py  reduce_moveset.py  test.py  train.py
run/conf/: train.yaml
run/conf/config/: config.yaml
run/conf/data/: data.yaml
run/conf/dir/: local.yaml
run/outputs/2023-12-21/14-56-16/.hydra/: config.yaml  hydra.yaml
run/outputs/2023-12-21/14-57-25/.hydra/: hydra.yaml
run/outputs/2023-12-21/14-58-09/.hydra/: hydra.yaml
run/outputs/2023-12-21/15-04-44/.hydra/: hydra.yaml
run/outputs/2023-12-21/15-08-43/.hydra/: config.yaml  hydra.yaml
src/: conf.py  dtos.py  eda.py  metric.py  utils.py
src/_dtos/: EvolutionResultsDTO.py
src/dtos/: EvolutionResultsDTO.py  MovesetDTO.py  PuzzleDTO.py  PuzzleStateChangeDTO.py  ResultDTO.py  ResultsDTO.py
src/exceptions/: participant_visible_error.py
src/generator/: puzzle_generator.py
src/generator/metrics/: metric_generator.py
src/generator/movesets/: atomic_moveset_generator.py  generative_moveset_generator.py  iterative_generative_moveset_generator.py  loop_removal_moveset_generator.py  moveset_generator_base.py  random_generative_moveset_generator.py  simple_moveset_generator.py
src/puzzles/: PuzzleTools.py  face_puzzle_solver.py  puzzle_solver_base.py  sample_puzzle_solver.py
src/reporter/: metric_reporter.py
src/utilities/: puzzle_utils.py
